Finished AWDWR Chapter 7

--- a/book-agile-web-dev-with-rails/depot/app/views/products/index.html.erb
+++ b/book-agile-web-dev-with-rails/depot/app/views/products/index.html.erb
@@ -32,6 +32,7 @@
 
 <%= link_to 'New Product', new_product_path %>
 
+
 <p>
   Play space:
 <%= # link_to 'New Product', new_product_path
@@ -46,7 +47,11 @@
             # protocol: ,
             # user: ,
             # password:
-}) %>
+})
+# TODO will rake find me?
+# OPTIMIZE make this less shit
+
+ %>
 <%= url_for('http://www.goo.com') %>
 <%= url_for(:back) %>
 </p>
